<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:gravity="center"
    android:orientation="vertical" >
	<LinearLayout
		android:id="@+id/body_container"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		<Button
			android:id="@+id/btn_scan_find" 
			android:layout_width="fill_parent"
			android:layout_height="100dip" 
			android:layout_weight="1"
			android:text="@string/btn_scan_find_text" />
		<Button
			android:id="@+id/btn_find" 
			android:layout_width="fill_parent"
			android:layout_height="100dip" 
			android:layout_weight="1"
			android:text="@string/btn_find_text" />
	</LinearLayout>
	<EditText 
		android:id="@+id/edit_isbn" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:hint="@string/edit_isbn_hint_text"
		android:inputType="number"
		android:maxLength="13" />
</LinearLayout>

